docs/pages/versions/v56.0.0/sdk/image.mdx
---
title: 图像
description: 一个跨平台且高性能的 React 组件，用于加载和渲染图像。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-image'
packageName: 'expo-image'
iconUrl: '/static/images/packages/expo-image.png'
platforms: ['android', 'ios', 'tvos', 'web', 'expo-go']
searchRank: 10
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import {
  ConfigPluginExample,
  ConfigPluginProperties,
  ConfigReactNative,
} from '~/ui/components/ConfigSection';
import { YesIcon, NoIcon } from '~/ui/components/DocIcons';
import { Terminal } from '~/ui/components/Snippet';

`expo-image` 是一个跨平台的 React 组件，用于加载和渲染图像。

**主要特性：**

- 为速度而设计
- 支持多种图像格式（包括动图）
- 磁盘和内存缓存
- 支持 [BlurHash](https://blurha.sh) 和 [ThumbHash](https://evanw.github.io/thumbhash/)——图像占位符的紧凑表示
- 当源发生变化时，可在图像之间平滑过渡（不再闪烁！）
- 实现了 CSS [`object-fit`](https://developer.mozilla.org/en-US/docs/Web/CSS/object-fit) 和 [`object-position`](https://developer.mozilla.org/en-US/docs/Web/CSS/object-position) 属性（参见 [`contentFit`](#contentfit) 和 [`contentPosition`](#contentposition) 属性）
- 底层使用高性能的 [`SDWebImage`](https://github.com/SDWebImage/SDWebImage) 和 [`Glide`](https://github.com/bumptech/glide)

#### 支持的图像格式

|         格式          |   Android   |     iOS     |                          Web                           |
| :---------------------: | :---------: | :---------: | :----------------------------------------------------: |
|          WebP           | <YesIcon /> | <YesIcon /> |                      <YesIcon />                       |
|       PNG / APNG        | <YesIcon /> | <YesIcon /> |                      <YesIcon />                       |
|          AVIF           | <YesIcon /> | <YesIcon /> |                      <YesIcon />                       |
|          HEIC           | <YesIcon /> | <YesIcon /> | <NoIcon /> [尚未被采用](https://caniuse.com/heif) |
|          JPEG           | <YesIcon /> | <YesIcon /> |                      <YesIcon />                       |
|           GIF           | <YesIcon /> | <YesIcon /> |                      <YesIcon />                       |
|           SVG           | <YesIcon /> | <YesIcon /> |                      <YesIcon />                       |
|           ICO           | <YesIcon /> | <YesIcon /> |                      <YesIcon />                       |
|          ICNS           | <NoIcon />  | <YesIcon /> |                       <NoIcon />                       |
| PSD (合成预览) | <NoIcon />  | <YesIcon /> |                       <NoIcon />                       |

## 安装

<APIInstallSection />

## 在 app 配置中进行配置

你可以使用 `expo-image` 的 [配置插件](/config-plugins/introduction/) 来配置构建时设置。将该插件添加到 **app.json** 或 **app.config.js** 的 `plugins` 数组中，然后重新构建原生项目。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-image",
        {
          "disableLibdav1d": true
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'disableLibdav1d',
      platform: 'ios',
      description:
        '当为 `true` 时，会跳过添加内置的 `libavif/libdav1d` Pod。当其他依赖项（例如 `FFmpegKit`）已经链接了 `libdav1d` 时请使用此项。禁用该 Pod 会移除 iOS 上的 AVIF 图像支持，除非可用其他解码器。',
      default: 'false',
    },
  ]}
/>

<ConfigReactNative>
  如果你没有使用 Continuous Native Generation ([CNG](/workflow/continuous-native-generation/))
  或者你正在手动使用原生 **ios** 项目，那么在运行 `pod install` 之前设置 shell 环境变量
  `EXPO_IMAGE_DISABLE_LIBDAV1D=1` 以达到相同效果。
  另外，你也可以在 `Podfile` 顶部添加 `ENV['EXPO_IMAGE_DISABLE_LIBDAV1D'] ||= '0'`。
</ConfigReactNative>

## 用法

```jsx
import { Image } from 'expo-image';
import { StyleSheet, View } from 'react-native';

const blurhash =
  '|rF?hV%2WCj[ayj[a|j[az_NaeWBj@ayfRayfQfQM{M|azj[azf6fQfQfQIpWXofj[ayj[j[fQayWCoeoeaya}j[ayfQa{oLj?j[WVj[ayayj[fQoff7azayj[ayj[j[ayofayayayj[fQj[ayayj[ayfjj[j[ayjuayj[';

export default function App() {
  return (
    <View style={styles.container}>
      <Image
        style={styles.image}
        source="https://picsum.photos/seed/696/3000/2000"
        placeholder={{ blurhash }}
        contentFit="cover"
        transition={1000}
      />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#fff',
    alignItems: 'center',
    justifyContent: 'center',
  },
  image: {
    flex: 1,
    width: '100%',
    backgroundColor: '#0553',
  },
});
```

### 从原生资源中使用图像

打包在 Xcode asset catalog 或 Android drawable 资源中的图像，可以通过名称使用 `source={{ uri: 'app_icon' }}` 加载。省略文件扩展名，并手动提供图像尺寸：

```tsx
import { Image } from 'expo-image';

export default function AppIcon() {
  return <Image source={{ uri: 'app_icon' }} style={{ width: 40, height: 40 }} />;
}
```

## 接口

```js
import { Image } from 'expo-image';
```

<APISection packageName="expo-image" apiName="Image" />

## 在服务器上生成 blurhash

图像可以显著提升视觉体验，但由于文件体积较大，也可能会拖慢应用/页面的加载时间。为了解决这个问题，你可以使用 blurhash 算法创建占位图像，它能在延迟加载实际图片的同时提供沉浸式体验。

本指南演示如何使用 JavaScript 和 Express.js 在后端为上传的图像创建 blurhash。相同的技术和原理也适用于其他语言和服务器技术。

首先安装几个依赖项：用于处理 multipart 请求的 [`multer`](https://github.com/expressjs/multer)，用于将文件转换为数据缓冲区的 [`sharp`](https://github.com/lovell/sharp)，以及官方的 [`blurhash` JavaScript 包](https://github.com/woltapp/blurhash/tree/master/TypeScript)。

<Terminal
  cmd={{
    npm: ['$ npm install multer sharp blurhash'],
    yarn: ['$ yarn add multer sharp blurhash'],
    pnpm: ['$ pnpm add multer sharp blurhash'],
    bun: ['$ bun add multer sharp blurhash'],
  }}
/>

接下来，从已安装的包中导入所有必需的函数，并初始化 `multer`：

```js
// Multer 是一个用于处理 `multipart/form-data` 的中间件。
const multer = require('multer');
// Sharp 允许你从上传的图像中接收数据缓冲区。
const sharp = require('sharp');
// 从 blurhash 包中导入 encode 函数。
const { encode } = require('blurhash');

// 初始化 `multer`。
const upload = multer();
```

假设 `app` 是一个持有 Express 服务器引用的变量，就可以创建一个接受图像并返回包含生成的 blurhash 的 JSON 响应的端点。

```js
app.post('/blurhash', upload.single('image'), async (req, res) => {
  const { file } = req;
  // 如果文件不可用，我们将返回错误。
  if (file === null) {
    res.status(400).json({ message: 'Image is missing' });
    return;
  }

  // 用户可以指定每个轴上的组件数量。
  const componentX = req.body.componentX ?? 4;
  const componentY = req.body.componentY ?? 3;

  // 我们正在将提供的图像转换为字节缓冲区。
  // Sharp 当前支持多种常见格式，如 JPEG、PNG、WebP、GIF 和 AVIF。
  const { data, info } = await sharp(file.buffer).ensureAlpha().raw().toBuffer({
    resolveWithObject: true,
  });

  const blurhash = encode(
    new Uint8ClampedArray(data),
    info.width,
    info.height,
    componentX,
    componentY
  );
  res.json({ blurhash });
});
```

此外，请求还可以包含两个参数：`componentX` 和 `componentY`，它们会传入算法中。这些值可以在服务器端计算或硬编码，也可以由用户指定。不过，它们必须在 1 到 9 的范围内，并且应与上传图像具有相似的宽高比。值为 9 时效果最佳，但生成哈希可能需要更长时间。

生成 blurhash 的过程可以用多种语言和服务器技术实现，类似于使用 JavaScript 的方式。关键步骤是为你选择的语言找到一个编码器，这通常可以在 [`woltapp/blurhash`](https://github.com/woltapp/blurhash#implementations) 仓库中找到。找到编码器后，你还需要获取图像的表示形式。有些库使用默认的图像类（例如，Swift 实现使用 `UIImage`）。在其他情况下，你需要提供原始字节数据。请务必查看编码器的文档，以确认期望的数据格式。

> 当使用原始字节数据时，请确保存在 alpha 层（每个像素由红、绿、蓝和 alpha 值表示）。否则会导致类似“宽度和高度必须与像素数组匹配”的错误。
